PostGIS 3.1.13dev
YYYY/MM/DD

* Bug Fixes *

 - #5947, [topology] Fix crash in ST_ModEdgeHeal (Sandro Santilli)
 - #5922, [topology] Fix crash in TopoGeo_AddLinestring with EMPTY input (Sandro Santilli)
 - #5907, [topology] Fix crash in TopoGeo_AddPolygon with EMPTY input (Sandro Santilli)
 - #5876, Fix ST_AddPoint with empty point argument (Paul Ramsey)
 - #5818, GT-244 Fix CG_IsSolid function (Loïc Bartoletti)
 - #5885, Fix documentation about grid-based overlay operations (Sandro Santilli)
 - PCRE2 support for more modern systems (Paul Ramsey)
 - #5921, Crash freeing uninitialized pointer (Arsenii Mukhin)
 - #5912, Crash on GML with xlink and no prefix (Paul Ramsey)
 - #5905, Crash on deeply nested geometries (Paul Ramsey)
 - #5909, ST_ValueCount crashes on empty table (Paul Ramsey)
 - #5917, ST_Relate becomes unresponsive (Paul Ramsey)


PostGIS 3.1.12
2024/12/23

PostgreSQL 9.6-14 required. GEOS 3.6+ required but GEOS 3.9+ to take advantage of all features.
Proj 4.9+ required.

* Bug Fixes *

 - #5795, [topology] Fix ST_NewEdgesSplit can cause invalid topology (Björn Harrtell)
 - #5589, ST_3DDistance error for shared first point (Paul Ramsey)
 - #5686, ST_NumInteriorRings and Triangle crash (Paul Ramsey)
 - #5765, Handle nearly co-linear edges with slightly less slop (Paul Ramsey)
 - #5745, St_AsLatLonText rounding errors (Paul Ramsey)
 - Handle null returns from wkb parser (Paul Ramsey)


PostGIS 3.1.11
2024/02/06

* Bug Fixes *
 - #5610, Regression fix: Allow Nan and infinity again
          in ST_SetPoint (Regina Obe)
 - #5627, #5647, Handling of EMPTY components in PiP check (Paul Ramsey)
 - #5604, Handle distance between collections with empty elements (Paul Ramsey)
 - #5635, Handle NaN points in ST_Split (Regina Obe)
 - Logic error in ST_Covers(geography) (Paul Ramsey)
 - #5646, Crash on collections with empty members (Paul Ramsey)
 - #5580, Handle empty collection components in 3d distance (Paul Ramsey)